recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:1: error: Missing closing brace `}' assumed here
def carre(c:Double) {
^FourSquare:1: error: expected class or object definition
def carre(c:Double) {
^